--- a/DynDNSimpleSvc/App.config
+++ b/DynDNSimpleSvc/App.config
@@ -4,11 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="username" value=""/>
-    <add key="password" value=""/>
+    <add key="domain_token" value=""/>
     <add key="domain" value=""/>
     <add key="recordid" value=""/>
-    <add key="recordname" value=""/>
     <add key="updateinterval_minutes" value="5"/>    
   </appSettings>
 </configuration>
