--- a/DynDNSimpleSvc/DynDNSimpleSvc.csproj
+++ b/DynDNSimpleSvc/DynDNSimpleSvc.csproj
@@ -35,17 +35,12 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DNSimple.Api">
-      <HintPath>..\packages\DNSimple.0.4.2\lib\4.0\DNSimple.Api.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="JsonFx">
-      <HintPath>..\packages\DNSimple.0.4.2\lib\4.0\JsonFx.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\DNSimple.0.4.2\lib\4.0\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="RestSharp">
-      <HintPath>..\packages\DNSimple.0.4.2\lib\4.0\RestSharp.dll</HintPath>
+    <Reference Include="RestSharp, Version=104.3.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\RestSharp.104.3.3\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -63,14 +58,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DNSimpleClient.cs" />
     <Compile Include="DynDNSimple.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DynDNSimple.Designer.cs">
       <DependentUpon>DynDNSimple.cs</DependentUpon>
     </Compile>
+    <Compile Include="JSONIPClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Record.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
